# TStar

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakeLists_macos.txt  CONTRIBUTING.md  INSPIRATION.md  README.md  build_all.bat  build_installer.bat  changelog.txt  deploy.bat  installer.iss  package_dist.bat  set_version.ps1  setup_python_dist.ps1  setup_python_macos.sh  temp_getColorMask.cpp
.github/workflows/: macos_build.yml
JS-Scripts/: MTF_HistogramTool.js
fake_venv/: pyvenv.cfg
scripts/: Mono_Preprocessing.tss  Mono_Preprocessing_BGE.tss  Mono_Preprocessing_NoDark.tss  Mono_Preprocessing_WithoutDBF.tss  Mono_Preprocessing_WithoutFlat.tss  OSC_Extract_Ha.tss  OSC_Extract_HaOIII.tss  OSC_Preprocessing.tss  OSC_Preprocessing_BGE.tss  OSC_Preprocessing_BGE_Undistort.tss  OSC_Preprocessing_BayerDrizzle.tss  OSC_Preprocessing_Drizzle.tss  OSC_Preprocessing_Master_Dark_Bias.tss  OSC_Preprocessing_NoFlat.tss  OSC_Preprocessing_WithoutDBF.tss  OSC_Preprocessing_WithoutDark.tss  OSC_Preprocessing_WithoutFlat.tss  OSC_Startrail.tss  RGB_Composition.tss  Seestar_Mosaic_Preprocessing.tss  Seestar_Preprocessing.tss  StarTrails_WithoutDBF.tss  Star_Reduction.tss  Star_Reduction_MTF.tss  stacking_batch.tss
src/: Icons.h  ImageBuffer.cpp  ImageBuffer.h  ImageBufferDelta.cpp  ImageBufferDelta.h  ImageViewer.cpp  ImageViewer.h  Info.plist  MainWindow.cpp  MainWindow.h  MainWindowCallbacks.h  TStar.rc  build_all.bat  build_installer.bat  build_installer_macos.sh  build_macos.sh  deploy.bat  i18n.qrc  installer.iss  macos_utils.sh  main.cpp  package_dist.bat  package_macos.sh  resources.qrc  version.rc.in  windows_utils.bat
src/algos/: AbeMath.cpp  AbeMath.h  ChannelOps.cpp  ChannelOps.h  CosmicClarityRunner.cpp  CosmicClarityRunner.h  CubicSpline.h  Deconvolution.cpp  Deconvolution.h  GHSAlgo.cpp  GHSAlgo.h  GraXpertRunner.cpp  GraXpertRunner.h  ImageBlendingRunner.cpp  ImageBlendingRunner.h  PerfectPaletteRunner.cpp  PerfectPaletteRunner.h  RARRunner.cpp  RARRunner.h  RawEditorProcessor.h  SPCC.cpp  SPCC.h  StarNetRunner.cpp  StarNetRunner.h  StarRecompositionRunner.cpp  StarRecompositionRunner.h  StarStretchRunner.cpp  StarStretchRunner.h  StatisticalStretch.cpp  StatisticalStretch.h  TGVDenoise.cpp  TGVDenoise.h
src/analysis/: ObjectTypeDetector.cpp  ObjectTypeDetector.h
src/astrometry/: AstapSolver.cpp  AstapSolver.h  HiPSClient.cpp  HiPSClient.h  NativePlateSolver.cpp  NativePlateSolver.h  SimbadSearcher.cpp  SimbadSearcher.h  TriangleMatcher.cpp  TriangleMatcher.h  WCSUtils.cpp  WCSUtils.h  WcsSolver.h
src/background/: BackgroundExtraction.cpp  BackgroundExtraction.h  CatalogGradientExtractor.cpp  CatalogGradientExtractor.h
src/calibration/: CalibrationC.c  CalibrationC.h  CalibrationEngine.cpp  CalibrationEngine.h
src/core/: ColorProfileManager.cpp  ColorProfileManager.h  DpiHelper.h  ErrorHandling.cpp  ErrorHandling.h  GlobalExceptionHandler.cpp  GlobalExceptionHandler.h  Logger.cpp  Logger.h  MaskLayer.h  MaskManager.h  ResourceManager.cpp  ResourceManager.h  RobustStatistics.cpp  RobustStatistics.h  SimdOps.cpp  SimdOps.h  SwapManager.cpp  SwapManager.h  TStarApplication.cpp  TStarApplication.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  ThreadState.cpp  ThreadState.h  Version.cpp.in  Version.h
src/dialogs/: ABEDialog.cpp  ABEDialog.h  AberrationInspectorDialog.cpp  AberrationInspectorDialog.h  AboutDialog.cpp  AboutDialog.h  AlignChannelsDialog.cpp  AlignChannelsDialog.h  AnnotationToolDialog.cpp  AnnotationToolDialog.h  ApplyMaskDialog.cpp  ApplyMaskDialog.h  ArcsinhStretchDialog.cpp  ArcsinhStretchDialog.h  AstroSpikeDialog.cpp  AstroSpikeDialog.h  BackgroundNeutralizationDialog.cpp  BackgroundNeutralizationDialog.h  BinningDialog.cpp  BlinkComparatorDialog.cpp  BlinkComparatorDialog.h  CBEDialog.cpp  CBEDialog.h  ChannelCombinationDialog.cpp  ChannelCombinationDialog.h  ClaheDialog.cpp  ClaheDialog.h  ColorProfileDialog.cpp  ContinuumSubtractionDialog.cpp  ContinuumSubtractionDialog.h  ConversionDialog.cpp  ConversionDialog.h  CorrectionBrushDialog.cpp  CorrectionBrushDialog.h  CosmicClarityDialog.cpp  CosmicClarityDialog.h  CropRotateDialog.cpp  CropRotateDialog.h  CurvesDialog.cpp  CurvesDialog.h  (+103 more)
src/imaging/: SensorProfile.cpp  SensorProfile.h
src/io/: CompressionUtils.cpp  CompressionUtils.h  FitsHeaderUtils.cpp  FitsHeaderUtils.h  FitsLoader.cpp  FitsLoader.h  FitsLoaderC.c  FitsLoaderC.h  FitsLoaderCWrapper.cpp  FitsLoaderCWrapper.h  FitsWrapper.h  IccProfileExtractor.cpp  RawLoader.cpp  RawLoader.h  SERFile.cpp  SERFile.h  SimpleTiffReader.cpp  SimpleTiffReader.h  SimpleTiffWriter.cpp  SimpleTiffWriter.h  TiffIO.h  XISFReader.cpp  XISFReader.h  XISFWriter.cpp  XISFWriter.h
src/minigame/: game.js  index.html  style.css
src/network/: ModelDownloader.cpp  ModelDownloader.h  UpdateChecker.cpp  UpdateChecker.h
src/photometry/: AperturePhotometry.cpp  AperturePhotometry.h  CatalogClient.cpp  CatalogClient.h  PCCCalibrator.cpp  PCCCalibrator.h  PCCResult.h  PsfFitter.cpp  PsfFitter.h  StarDetector.cpp  StarDetector.h
src/preprocessing/: Debayer.cpp  Debayer.h  MasterFrames.cpp  MasterFrames.h  Preprocessing.cpp  Preprocessing.h  PreprocessingTypes.h  XTransDemosaic.cpp  XTransDemosaic.h
src/scripting/: JSApi.cpp  JSApi.h  JSApp.cpp  JSApp.h  JSHistogramWidget.cpp  JSHistogramWidget.h  JSProcessBase.h  JSProcessFactory.cpp  JSProcessFactory.h  JSProcesses.cpp  JSProcesses.h  JSRuntime.cpp  JSRuntime.h  JSUI.cpp  JSUI.h  ScriptParser.cpp  ScriptParser.h  ScriptRunner.cpp  ScriptRunner.h  ScriptTypes.h  StackingCommands.cpp  StackingCommands.h  msvc_compat.cpp
src/scripts/: cosmic_bridge.py  graxpert_bridge.py  rar_worker.py  starnet_converter.py
src/stacking/: AnscombeTransform.h  BackgroundExtraction.cpp  BackgroundExtraction.h  Blending.cpp  Blending.h  CosmeticCorrection.cpp  CosmeticCorrection.h  Distortion.cpp  (+35 more)
tools/: check_missing.py  check_missing_trans.py  generate_ts.py  trans_data.py  translate_manager.py  xcopy_exclude.txt
translations/: tstar_de.ts  tstar_en.ts  tstar_es.ts  tstar_fr.ts  tstar_it.ts  tstar_template.ts
(+226 files in other folders)
